# OpenGL

./: .gitignore  CMakeLists.txt  main.c
Etapas/: FirstSquare.c
Etapas/capitulo 1/: 2FragmentShaders.c  2TrianglesDrawArrays.c  2trianglesWithEBO.c  offSetWithVertex.c
Etapas/capitulo 1/2RotatingSquares/: main.c
Etapas/capitulo 1/2RotatingSquares/shaders/: vertex.glsl
Etapas/capitulo 1/MovableCamera/: main.c
Etapas/capitulo 1/RotatingSquare/: main.c
Etapas/capitulo 1/TwoTextures/: main.c
Etapas/capitulo 1/TwoTextures/shaders/: fragment.glsl  vertex.glsl
Etapas/capitulo 1/camera mouse/: main.c
Etapas/capitulo 1/camera mouse/shaders/: fragment.glsl
Etapas/capitulo 1/rotateCameraArroundScene/: main.c
Etapas/capitulo 1/rotatingCube/: main.c
Etapas/capitulo 1/squareAsFloor/: main.c
Etapas/capitulo 1/squareAsFloor/shaders/: vertex.glsl
Etapas/capitulo 1/variableMix/: main.c
Etapas/capitulo 1/variableMix/shaders/: fragment.glsl
Etapas/capitulo 2/diffuse and ambient/: main.c
Etapas/capitulo 2/diffuse and ambient/shaders/: fragment.glsl  vertex.glsl
Etapas/capitulo 2/dynamic light and material properties/: main.c
Etapas/capitulo 2/dynamic light and material properties/shaders/: fragment.glsl  vertex.glsl
Etapas/capitulo 2/flashlight/: main.c
Etapas/capitulo 2/flashlight/shaders/: fragment.glsl  (+1 more)
Etapas/capitulo 2/point and directional light/: main.c
Etapas/capitulo 2/specular/: main.c
include/: camera.h  shader.h  texture.h  utils.h
libs/glad/src/: glad.c
shaders/: fragment.glsl  vertex.glsl
src/: camera.c  shader.c  texture.c
(+5 files in other folders)
